syntax = "proto3";

package position_info.v1;

option go_package = "service/app/banner/api/position_info/v1";

import "pbentity/position_info.proto";

service position_info {
    rpc GetList(PositionInfoGetListReq) returns (PositionInfoGetListRes) {};
    rpc Create(PositionInfoCreateReq) returns (PositionInfoCreateRes) {};
    rpc Update(PositionInfoUpdateReq) returns (PositionInfoUpdateRes) {};
    rpc Delete(PositionInfoDeleteReq) returns (PositionInfoDeleteRes) {};
}

message PositionInfoCreateReq {
    string PicUrl = 1;
    string GoodsName = 2;
    string Link = 3;
    uint32 Sort = 4;
    uint32 GoodsId = 5;
}

message PositionInfoCreateRes {
    uint32 id = 1;
}

message PositionInfoUpdateReq {
    uint32 Id = 1;
    string PicUrl = 2;
    string GoodsName = 3;
    string Link = 4;
    uint32 Sort = 5;
    uint32 GoodsId = 6;
}

message PositionInfoUpdateRes {
    uint32 id = 1;
}

message PositionInfoDeleteReq {
    uint32 id = 1;
}

message PositionInfoDeleteRes {
}

message PositionInfoGetListReq {
    uint32 sort = 1;
    uint32 page = 2;
    uint32 size = 3;
}

message PositionInfoListResponse {
    repeated pbentity.PositionInfo list = 1;
    uint32 page = 2;
    uint32 size = 3;
    uint32 total = 4;
}

message PositionInfoGetListRes {
    PositionInfoListResponse data = 1;
}
